--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <title>Portfolio</title>
     <link rel="manifest" href="manifest.json" />
-    <link rel="stylesheet" type="text/css" href="style.css" />
+    <!-- <link rel="stylesheet" type="text/css" href="style.css" /> -->
   </head>
   <body>
     <div class="center">
@@ -42,7 +42,7 @@
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
     <script>
-      var serviceWorkerVersion = '1784815688';
+      var serviceWorkerVersion = '3031353159';
       var scriptLoaded = false;
       function loadMainDartJs() {
         if (scriptLoaded) {
