--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
     <!-- iOS meta tags & icons -->
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-    <meta name="apple-mobile-web-app-title" content="Portfolio" />
+    <meta name="apple-mobile-web-app-title" content="Portfolion" />
     <link rel="apple-touch-icon" href="icons/Icon-192.png" />
 
-    <title>Portfolio</title>
+    <title>Portfolion</title>
     <link rel="manifest" href="manifest.json" />
-    <!-- <link rel="stylesheet" type="text/css" href="style.css" /> -->
+    <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
   <body>
     <div class="center">
