--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
     <!-- iOS meta tags & icons -->
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-    <meta name="apple-mobile-web-app-title" content="Portfolion" />
+    <meta name="apple-mobile-web-app-title" content="Portfolio" />
     <link rel="apple-touch-icon" href="icons/Icon-192.png" />
 
-    <title>Portfolion</title>
+    <title>Portfolio</title>
     <link rel="manifest" href="manifest.json" />
     <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
@@ -42,7 +42,7 @@
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
     <script>
-      var serviceWorkerVersion = '3031353159';
+      var serviceWorkerVersion = '521810555';
       var scriptLoaded = false;
       function loadMainDartJs() {
         if (scriptLoaded) {
